--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -57,7 +57,7 @@
     display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
     width: 20rem;
     height: 5.6rem;
     background: var(--color-secundary);
@@ -66,7 +66,7 @@
     border-radius: 0.8rem;
     cursor: pointer;
     font: 700 1.4rem Archivo;
-
+    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
